force-app/main/default/objects/SEPA_Bank_Account__c/SEPA_Bank_Account__c.object-meta.xml
<CustomObject>
    <description>Stores information about a SEPA Bank Account. The name of the bank account is equal to the IBAN number.</description>
    <label>SEPA Bank Account</label>
    <nameField>
        <label>SEPA Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEPA Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>