force-app/main/default/objects/SEPA_Bank_Account__c/fields/Account_Holder_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Type__c</fullName>
    <description>The type of the account holder
NP = Natural Person
ORG = Organization</description>
    <label>Account Holder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>ORG</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>