force-app/main/default/objects/SEPA_Bank_Account__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the account is active or not.</description>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>