force-app/main/default/objects/SEPA_Bank_Account__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>The country code of where the account is registered.</description>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>