force-app/main/default/objects/SEPA_Bank_Account__c/fields/Foreign__c.field-meta.xml
<CustomField>
    <fullName>Foreign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the bank account is foreign or not.</description>
    <label>Foreign</label>
    <type>Checkbox</type>
</CustomField>