force-app/main/default/objects/SEPA_Bank_Account__c/fields/Joint_Account__c.field-meta.xml
<CustomField>
    <fullName>Joint_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the account is a joint account or not.</description>
    <label>Joint Account</label>
    <type>Checkbox</type>
</CustomField>