force-app/main/default/objects/SEPA_Bank_Account__c/fields/Number_of_Account_Holders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Account_Holders__c</fullName>
    <description>The number of account holders registered for this account.</description>
    <label>Number of Account Holders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>